# paicer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: paicer-plan.md  paicer-review.md  review.md  sync.md
.claude/commands/paicer/: create-plan.md  review-progress.md
.claude/skills/: plan-authoring.md
docs/: CLAUDE_GUIDE.md  TODO.md  build_plan_v3.py  garmin-api.md
docs/integrations/: garmin.md
examples/: hm-tri-combo.yaml  reference-imperial.yaml  reference-metric.yaml  reference.yaml
plans/: hm-tri-combo.yaml  reference.yaml
src/: generate_workouts.py  plan_utils.py  render_plan.py  review_data.py
src/formatters/: __init__.py  base.py  html.py  markdown.py
src/integrations/: __init__.py  base.py  garmin.py
strava-enricher/: .dev.vars.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json  setup.sh  tsconfig.json  wrangler.example.toml
strava-enricher/src/: description.ts  index.ts  plan-matcher.ts  strava.ts  types.ts
